# py-enumerable

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  PLANS.md  Pipfile  README.md  README.rst  lcov.info  pyproject.toml  pytest.ini  run_tests.py  setup.py
.github/workflows/: ci.yml  prod-cd.yml  pythonpackage.yml  test-cd.yml
.opencode/plans/: fix-issue-79-reverse.md  uv-migration.md
.opencode/plans/issues/: 82.md
docs/: add.md  aggregate.md  all.md  any.md  append.md  avg.md  concat.md  contains.md  count.md  default_if_empty.md  distinct.md  element-at-or-default.md  element-at.md  empty.md  except.md  execplan-drop-future.md  first-or-default.md  first.md  for-each.md  group-by.md  group-join.md  index-of.md  index.md  intersect.md  join.md  last-index-of.md  last-or-default.md  last.md  max.md  median.md  min.md  order-by-descending.md  order-by.md  prepend.md  range.md  repeat.md  reverse.md  select-many.md  select.md  single-or-default.md  (+14 more)
enumerable/: Enumerable.py
py_linq/: __init__.py  core.py  decorators.py  exceptions.py  linq.py  py_linq.py  py_linq3.py
tests/: Constructor.py  Functions.py  __init__.py  fixtures.py  test_constructor.py  test_functions.py  test_issues.py  test_performance.py  test_repeatable.py
tests/files/: test_file1.txt
