[tool.poetry]
name = "py-linq"
version = "1.2.5"
description = "LINQ (Language Integrated Query) is a popular querying language available in .NET. This library ports the language so that developers can query collections of objects using the same syntax. This library would be useful for Python developers with experience using the expressiveness and power of LINQ."
authors = ["Bruce Fenske <bwfenske@ualberta.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/viralogic/py-enumerable"
homepage = "https://github.com/viralogic/py-enumerable"
keywords = ["LINQ", "py-linq"]

[tool.poetry.dependencies]
python = ">=3.6.1"
future = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
