[project]
name = "py-linq"
version = "1.4.0"
description = "LINQ (Language Integrated Query) is a popular querying language available in .NET. This library ports the language so that developers can query collections of objects using the same syntax. This library would be useful for Python developers with experience using the expressiveness and power of LINQ."
authors = [{name = "Bruce Fenske", email = "bwfenske@ualberta.ca"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "future>=0.18.2,<0.19",
    "six>=1.16.0,<2",
]
keywords = ["LINQ", "py-linq"]
urls = {repository = "https://github.com/viralogic/py-enumerable", homepage = "https://github.com/viralogic/py-enumerable"}

[project.optional-dependencies]
dev = [
    "pytest>=6.1.2,<7",
    "pytest-cov>=2.10.1,<3",
    "black>=20.8b1,<21",
    "pre-commit>=2.8.2,<3",
    "flake8>=3.8.4,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["py_linq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
