[project]
name = "py-linq"
version = "1.5.0"
description = "LINQ (Language Integrated Query) is a popular querying language available in .NET. This library ports the language so that developers can query collections of objects using the same syntax. This library would be useful for Python developers with experience using the expressiveness and power of LINQ."
authors = [{name = "Bruce Fenske", email = "fenskebw@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["LINQ", "py-linq"]
urls = {repository = "https://github.com/viralogic/py-enumerable", homepage = "https://github.com/viralogic/py-enumerable"}

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<7",
    "black>=24.0,<26",
    "pre-commit>=2.8.2,<3",
    "ruff>=0.15,<1",
]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
ignore = ["E712", "E231", "E203", "E501", "E741", "F401", "F811", "F841"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.hatch.build.targets.wheel]
packages = ["py_linq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

